Fix header menu cut off on smaller screens, closes #10

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -252,10 +252,11 @@ main.main-content {
 /* Navigation wrapper */
 
 nav {
-  padding-left: 37%;
   z-index: 2;
   overflow-y: hidden;
   display: inline;
+  float: right;
+  margin-top: 0.25rem;
 }
 
 .nav-menu {
